# spike-snn-event-vision-kit

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  AUTONOMOUS-BACKLOG.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT_V2.md  AUTONOMOUS_SDLC_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_FINAL_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  Makefile  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION_REPORT.md  PROJECT_CHARTER.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  TERRAGON_SDLC_v4_EXECUTION_COMPLETE.md  adaptive_generation_1_lightweight.py  adaptive_generation_1_optimized.py  adaptive_generation_1_simple.py  adaptive_generation_2_robust.py  adaptive_generation_3_scaling.py  advanced_neuromorphic_research_demo.py  autonomous_comprehensive_testing_framework.py  autonomous_gen1_enhanced_workflow.py  autonomous_gen2_robust_system.py  (+113 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  hardware_support.yml
.github/workflows/: production-deployment.yml
.terragon/: config.yaml  value-metrics.json
deploy/: deployment_report.json
deploy/backup/: backup-config.json  backup-job.json
deploy/compliance/: gdpr-compliance.yaml  security-policies.yaml
deploy/config/: asia-pacific.json  development.json  eu-west.json  production.json  staging.json  us-east.json
deploy/disaster-recovery/: backup-strategy.yaml
deploy/docker/: Dockerfile  Dockerfile.optimized  Dockerfile.production  docker-compose.prod.yml  docker-compose.production.yml
deploy/helm/spike-snn-event/: Chart.yaml  values-production.yaml  values.yaml
deploy/helm/spike-snn-event/templates/: deployment.yaml
deploy/i18n/: config.json  de.json  en.json  es.json  fr.json  ja.json  zh.json
deploy/istio/: istio-system.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
deploy/kubernetes/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
deploy/monitoring/: alert-rules.yml  jaeger-config.yaml  monitoring-config.json  neuromorphic-dashboard.json  prometheus-config.yaml  prometheus.yml
deploy/monitoring/grafana/: neuromorphic-dashboard.json
deploy/monitoring/grafana/dashboards/: neuromorphic-vision-dashboard.json
deploy/multi-region/: argocd-global-config.yaml  global-deployment-manager.yaml  global-deployment.yaml
deploy/performance/: hpa.json  optimization-config.json
deploy/production/: config.json  deployment.yaml  deployment_report.json  docker-compose.prod.yml  service.yaml  system_report.json
deploy/production/asia-pacific/: deployment.yaml  service.yaml
deploy/production/eu-west/: deployment.yaml  service.yaml
deploy/production/us-east/: deployment.yaml  service.yaml
deploy/scripts/: deploy.sh
deploy/security/: network-policy.json  security-measures.json
deploy/terraform/: data.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
docs/: API_REFERENCE.md  QUICK_START.md  ROADMAP.md  conf.py  index.rst
docs/_static/: custom.css
docs/adr/: README.md  adr-0001-spiking-neural-network-framework.md  adr-0002-event-camera-abstraction.md  adr-0003-neuromorphic-hardware-backends.md
docs/deployment/: README.md  docker.md
docs/workflows/: README.md  ci-cd-requirements.md  ci-template.yml  ci.md
examples/: advanced_scaling.py  basic_detection.py  basic_usage.py
k8s/production/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  service.yaml
monitoring/: docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/dashboards/: snn-overview.json
monitoring/production/: alert-rules.yml  grafana-dashboard.json  monitoring-deployment.yaml  prometheus.yml
neuromorphic_env/: pyvenv.cfg
scripts/: build.sh  deploy.sh  health_check.py  security-scan.sh  setup_dev.sh
src/spike_snn_event/: __init__.py  _version.py  adaptive_intelligence.py  adaptive_neuromorphic_core.py  advanced_scaling.py  advanced_telemetry.py  advanced_validation.py  async_event_processor.py  cli.py  compliance.py  concurrency.py  config.py  core.py  datasets.py  global_deployment.py  gpu_distributed_processor.py  health.py  high_performance_core.py  i18n.py  intelligent_autoscaler.py  intelligent_cache.py  intelligent_cache_system.py  lite_core.py  models.py  monitoring.py  optimization.py  quality_gates.py  robust_core.py  robust_system.py  ros2_nodes.py  scaling.py  scaling_system.py  security.py  security_enhancements.py  training.py  training_pipeline.py  validation.py
tests/: __init__.py  conftest.py  test__version.py  test_adaptive_intelligence.py  test_adaptive_neuromorphic_core.py  test_advanced_scaling.py  test_advanced_telemetry.py  test_advanced_validation.py  test_async_event_processor.py  test_basic.py  test_cli.py  test_compliance.py  test_concurrency.py  test_config.py  test_core.py  test_datasets.py  test_global_deployment.py  test_gpu_distributed_processor.py  test_health.py  test_high_performance_core.py  test_i18n.py  test_intelligent_autoscaler.py  test_intelligent_cache.py  test_intelligent_cache_system.py  test_lite_core.py  test_models.py  test_monitoring.py  test_optimization.py  test_quality_gates.py  test_robust_core.py  test_robust_integration.py  test_robust_system.py  test_ros2_nodes.py  test_scaling.py  test_scaling_system.py  test_security.py  test_security_enhancements.py  test_training.py  test_training_pipeline.py  test_validation.py
tests/benchmarks/: __init__.py  test_performance.py
tests/e2e/: test_system.py
tests/fixtures/: __init__.py  test_data.py
tests/integration/: test_end_to_end.py
