[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spike-snn-event-vision-kit"
dynamic = ["version"]
description = "Production-ready toolkit for event-camera object detection with spiking neural networks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Schmidt", email = "daniel@example.com"},
]
keywords = [
    "neuromorphic",
    "spiking-neural-networks",
    "event-camera",
    "computer-vision",
    "robotics",
    "edge-ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "matplotlib>=3.5.0",
    "pillow>=8.3.0",
    "tqdm>=4.64.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cuda = ["cupy-cuda11x>=10.0.0"]
ros2 = [
    "rclpy>=3.0.0",
    "sensor-msgs>=4.0.0",
    "geometry-msgs>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.18.0",
]
monitoring = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/spike-snn-event-vision-kit"
Documentation = "https://spike-snn-event-vision.readthedocs.io"
Repository = "https://github.com/yourusername/spike-snn-event-vision-kit.git"
"Bug Tracker" = "https://github.com/yourusername/spike-snn-event-vision-kit/issues"

[project.scripts]
spike-snn-train = "spike_snn_event.cli:train"
spike-snn-detect = "spike_snn_event.cli:detect"
spike-snn-benchmark = "spike_snn_event.cli:benchmark"

[tool.setuptools_scm]
write_to = "src/spike_snn_event/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "hardware: marks tests that require specific hardware",
]